hydroflow/tests/compile-fail/surface_missing_args.stderr
error: expected 1 argument(s), found 0
 --> tests/compile-fail/surface_missing_args.rs:5:9
  |
5 |         recv_iter() -> for_each();
  |         ^^^^^^^^^^^

error: expected 1 argument(s), found 0
 --> tests/compile-fail/surface_missing_args.rs:5:24
  |
5 |         recv_iter() -> for_each();
  |                        ^^^^^^^^^^
